log
Thu May 11 07:11:43 PM -04 2023: 
 tests:  1|3
total_score: 10/70
da9f140
Thu May 11 07:12:53 PM -04 2023: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
19dd403
Thu May 11 07:14:20 PM -04 2023: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
41db2c7
Thu May 11 07:15:01 PM -04 2023: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d2c9806
Thu May 11 07:35:38 PM -04 2023: 
 heap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
heap.c: In function ‘reordenamiento_ascendente’:
heap.c:59:17: error: expected identifier or ‘(’ before ‘=’ token
   59 |       heapElem  = arreglo[i];
      |                 ^
Compilation failed
2065b58
Thu May 11 07:36:10 PM -04 2023: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
4d96ca4
Thu May 11 07:37:11 PM -04 2023: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
abfd5f6
Thu May 11 07:41:59 PM -04 2023: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
707b479
